# obs-nvfbc

./: .gitlab-ci.yml  Dockerfile  LICENSE  README.md  meson.build  nvfbc.c
.github/workflows/: build.yml
